--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ package-lock.json
 dist/*
 src/no-ex.less
 src/no-ex.svelte
-src/pluginConfig.ts     #comment out when pushing to gh
-src/global.less         #comment out when pushing to gh
-src/globalCss.less      #comment out when pushing to gh
+#src/pluginConfig.ts     #comment out when pushing to gh
+#src/global.less         #comment out when pushing to gh
+#src/globalCss.less      #comment out when pushing to gh
 src/*.*__
+makeLinks.sh
